force-app/main/default/objects/Account/fields/Demo_T__c.field-meta.xml
<CustomField>
    <fullName>Demo_T__c</fullName>
    <label>Demo Three</label>
    <length>16</length>
    <type>Text</type>
</CustomField>