force-app/main/default/objects/Account/fields/Demo_Text__c.field-meta.xml
<CustomField>
    <fullName>Demo_Text__c</fullName>
    <label>Demo Text</label>
    <length>16</length>
    <type>Text</type>
</CustomField>