force-app/main/default/objects/Account/fields/Demo_Two__c.field-meta.xml
<CustomField>
    <fullName>Demo_Two__c</fullName>
    <description>Example</description>
    <label>Demo Two</label>
    <length>16</length>
    <type>Text</type>
</CustomField>