force-app/main/default/objects/Account/fields/DemoCompu__c.field-meta.xml
<CustomField>
    <fullName>DemoCompu__c</fullName>
    <label>DemoCompu</label>
    <length>16</length>
    <type>Text</type>
</CustomField>