force-app/main/default/objects/Account/fields/DemoHouse__c.field-meta.xml
<CustomField>
    <fullName>DemoHouse__c</fullName>
    <label>DemoHouse</label>
    <length>16</length>
    <type>Text</type>
</CustomField>