force-app/main/default/objects/Account/fields/DemoMobile__c.field-meta.xml
<CustomField>
    <fullName>DemoMobile__c</fullName>
    <label>DemoMobile</label>
    <length>16</length>
    <type>Text</type>
</CustomField>