force-app/main/default/objects/Account/fields/DText__c.field-meta.xml
<CustomField>
    <fullName>DText__c</fullName>
    <label>DText</label>
    <length>16</length>
    <type>Text</type>
</CustomField>