force-app/main/default/objects/Account/fields/Text_bcv__c.field-meta.xml
<CustomField>
    <fullName>Text_bcv__c</fullName>
    <label>Text bcv</label>
    <length>16</length>
    <type>Text</type>
</CustomField>