force-app/main/default/objects/Account/fields/Text_Demo__c.field-meta.xml
<CustomField>
    <fullName>Text_Demo__c</fullName>
    <label>Text Demo</label>
    <length>16</length>
    <type>Text</type>
</CustomField>